maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true}
             ^Escaper:6: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
      return true}
      ^Escaper:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false}
             ^Escaper:9: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
      return false}
      ^Escaper:13: error: type mismatch;
 found   : Unit
 required: Boolean
    if(keepHandOnSideWall()){avance()}
                         ^Escaper:18: error: type mismatch;
 found   : Unit
 required: Boolean
  prendBiscuit()
              ^